Fixes TGUI being too big

--- a/tgui/packages/tgui/styles/interfaces/OrbitalMap.scss
+++ b/tgui/packages/tgui/styles/interfaces/OrbitalMap.scss
@@ -20,7 +20,3 @@
 .OrbitalMap__tracking {
   height: 200px;
 }
-
-.OrbitalMap__shuttle {
-  height: 550px;
-}
